adicionando link referente ao css

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="style.css">
 <div class="wrap">
     <div class="cover">
         <img class="profile" src="https://media.licdn.com/dms/image/v2/C5603AQGZ3fAEenId-A/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1610736440206?e=1731542400&v=beta&t=ZamhPaGM1K2Du4f9qoxFOQojrq28cXBB3ksb_BP59WE" />
